Changed the name of the author

--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link preload href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&amp;display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="app.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      preload
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="app.css" />
     <title>Farood</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
     <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
     <script type="module" src="./src/App.js"></script>
-</body>
-
+  </body>
 </html>
 
-
-
-<!-- <h1>I am farhan</h1>   This is replaced by react.render(ELEMENT) -->
+<!-- <h1>I am fox-byte</h1>   This is replaced by react.render(ELEMENT) -->
